fix : 쇼핑몰에서 노출할 상품들을 pageable productDto로 변환하여 반환